# granola-cli

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.changeset/: README.md  calm-meadows-drift.md  quiet-islands-boil.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-openclaw.yml  release.yml
.openclaw-plugin/: marketplace.json
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/skills/: granola
plugins/claude-code/skills/granola/: SKILL.md
plugins/claude-code/skills/granola/references/: folders.md  notes.md
plugins/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugins/openclaw/src/: index.ts  setup-entry.ts
plugins/openclaw/types/: openclaw-plugin-sdk.d.ts
postman/: README.md  granola.postman_collection.json
postman/.postman/: config.json
postman/postman/globals/: workspace.postman_globals.json
scripts/: check-pnpm.mjs
skills/granola/: SKILL.md
skills/granola/references/: auth.md  folders.md  notes.md
src/granola_cli/: __init__.py  cli.py  client.py
src/granola_cli/commands/: _common.py  folders.py  notes.py  skill.py
