[project]
name = "granola-cli"
version = "0.1.0"
description = "Alavida Granola CLI — read meeting notes, transcripts, and folders from Granola for AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Alavida" }]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
granola = "granola_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/granola_cli"]

# Bundle the Claude/OpenClaw skill (top-level skills/) into the wheel under
# granola_cli/_skills/ so `granola skill install` can find it via importlib.resources.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "granola_cli/_skills"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
